# ckanext-saml2auth

./: CHANGELOG.md  MANIFEST.in  README.md  conftest.py  dev-requirements.txt  pyproject.toml  setup.py  test.ini
.github/workflows/: ci.yml
ckanext/saml2auth/: cache.py  helpers.py  plugin.py
ckanext/saml2auth/i18n/: ckanext-saml2auth.pot
ckanext/saml2auth/i18n/es/LC_MESSAGES/: ckanext-saml2auth.mo  ckanext-saml2auth.po
ckanext/saml2auth/templates/user/snippets/: login_form.html
ckanext/saml2auth/tests/: fixtures.py  test_blueprint_get_request.py  test_get_user_by_email.py
ckanext/saml2auth/tests/responses/: unsigned0.xml
ckanext/saml2auth/views/: saml2auth.py
